<resources>
    <string name="app_name">ToDo</string>
    <string name="forgot_pwd">forgot_pwd</string>
    <string name="login_successfull">Login Successfully</string>
    <string name="show_as_view">text_changeView</string>
    <string name="text_settings">text_settings</string>
    <string name="text_skip">text_skip</string>
    <string name="details">"enter your details or create Account"</string>
    <string name="password">"invalid Password"</string>
    <string name="registration_successful">"RegisterActivity Successful"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email_should_not_empty">Email_should_not_empty</string>
    <string name="invalid_Emailid">invalid_Emailid</string>
    <string name="Password_should_not_empty">Password_should_not_empty</string>
    <string name="name_should_not_empty">name_should_not_empty</string>
    <string name="email_should_not_empty">email_should_not_empty</string>
    <string name="incorrect_Email">invalid_Email</string>
    <string name="password_should_not_empty">password_should_not_empty</string>
    <string name="password_should_be_minimum_5_character">password_should_be_minimum_5_character</string>
    <string name="wrong_format_of_password">wrong_format_of_password</string>
    <string name="mobile_no_should_not_be_empty">mobile_no_should_not_be_empty</string>
    <string name="mobile_no_should_be_10_digit">mobile_no_should_be_10_digit</string>
    <string name="Emailid_should_not_empty">Emailid_should_not_be_empty</string>
    <string name="Address_should_not_be_empty">Address_should_not_empty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer notification labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <style name="AppTheme.PopupOverlay">AppTheme.PopupOverlay</style>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hiiiiiiiii">hiiiiiiiii</string>
    <string name="Open_navigation_drawer">Open_navigation_drawer</string>
    <string name="navigation_drawer_closeClose">navigation_drawer_closeClose</string>
    <string name="logout_success">logout_success</string>
    <string name="nav_deleted">nav_deleted</string>
    <string name="deleted">deleted</string>
    <string name="notifications">notification</string>
    <string name="Archive">Archive</string>
    <string name="Settings">Settings</string>
    <string name="Createnewlabel">Createnewlabel</string>
    <string name="Reminders">Reminders</string>
    <string name="Notes">Notes</string>
    <string name="Deleted">Deleted</string>

</resources>
